[package]
name = "Rustcoin"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = "1.0.1"
rand = "0.7.3"  # Downgraded from 0.8.5 to 0.7.3
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.9.9"   # Downgraded to match ed25519-dalek's dependency
tokio = { version = "1.40.0", features = ["full"] }
bincode = "1.3.3"


[overrides]
rand_core = "0.6.4"